# UAV_Aerial_Segmentation_cpp_onnx

./: CMakeLists.txt  README.md
include/: ort_session_handler.hpp
networks/: labels.txt
src/: main.cpp  ort_session_handler.cpp
